@@ -39,7 +39,31 @@ METHOD (BseWaveOsc, request-pcm-position) {
   if (!BSE_IS_WAVE_OSC (self))
     return BSE_ERROR_PROC_PARAM_INVAL;
   
-  bse_wave_osc_request_pcm_position (self);
+  bse_wave_osc_request_pcm_position (self, -1);
+  
+  return BSE_ERROR_NONE;
+}
+
+METHOD (BseWaveOsc, pcm-seek-perc) {
+  HELP	= "Seek oscillator to a given pcm percentage during playback.";
+  IN	= g_param_spec_object ("wosc", NULL, "Wave Oscilator",
+			       BSE_TYPE_WAVE_OSC, BSE_PARAM_DEFAULT);
+  IN	= g_param_spec_float ("pos_perc", NULL, NULL,
+			      0, 100, 0,
+			      BSE_PARAM_DEFAULT);
+} BODY (BseProcedureClass *proc,
+	const GValue      *in_values,
+	GValue            *out_values)
+{
+  /* extract parameter values */
+  BseWaveOsc *self = g_value_get_object (in_values++);
+  gfloat      pos  = g_value_get_float (in_values++);
+  
+  /* check parameters */
+  if (!BSE_IS_WAVE_OSC (self))
+    return BSE_ERROR_PROC_PARAM_INVAL;
+  
+  bse_wave_osc_request_pcm_position (self, CLAMP (pos, 0, 100));
   
   return BSE_ERROR_NONE;
 }
